<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <EditText
            android:id="@+id/edit"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:autofillHints=""
            android:background="@color/purple_200"
            android:fontFamily="@font/merriweather_regular"
            android:inputType="textMultiLine"
            android:hint="@string/number0"
            android:gravity="end|bottom"
            android:textSize="90sp"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <Button
            android:id="@+id/btn_7"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:backgroundTint="@color/gray"
            android:layout_marginEnd="5dp"
            android:onClick="SetSeven"
            android:text="@string/number7"
            android:layout_weight="2"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_8"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:backgroundTint="@color/gray"
            android:layout_marginEnd="5dp"
            android:onClick="SetEight"
            android:text="@string/number8"
            android:layout_weight="2"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_9"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="2"
            android:onClick="SetNine"
            android:backgroundTint="@color/gray"
            android:text="@string/number9"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_delete_number"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:backgroundTint="@color/pink"
            android:text="@string/delete_number"
            android:onClick="SetDeleteNumber"
            android:layout_marginEnd="5dp"
            android:layout_weight="2"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_delete_all"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:backgroundTint="@color/pink"
            android:text="@string/delete_all"
            android:onClick="SetDeleteAll"
            android:layout_weight="2"
            android:textSize="50sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <Button
            android:id="@+id/btn_4"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:backgroundTint="@color/gray"
            android:layout_marginEnd="5dp"
            android:onClick="SetFour"
            android:text="@string/number4"
            android:layout_weight="2"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_5"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:backgroundTint="@color/gray"
            android:onClick="SetFive"
            android:layout_marginEnd="5dp"
            android:text="@string/number5"
            android:layout_weight="2"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_6"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="2"
            android:onClick="SetSix"
            android:backgroundTint="@color/gray"
            android:text="@string/number6"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_sub"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:backgroundTint="@color/pink"
            android:text="@string/sub"
            android:onClick="SetSub"
            android:layout_marginEnd="5dp"
            android:layout_weight="2"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_divide"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:backgroundTint="@color/pink"
            android:text="@string/divide"
            android:onClick="SetDivide"
            android:layout_weight="2"
            android:textSize="50sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <Button
            android:id="@+id/btn_1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:backgroundTint="@color/gray"
            android:layout_marginEnd="5dp"
            android:onClick="SetOne"
            android:text="@string/number1"
            android:layout_weight="2"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_2"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:backgroundTint="@color/gray"
            android:layout_marginEnd="5dp"
            android:onClick="SetTwo"
            android:text="@string/number2"
            android:layout_weight="2"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_3"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="2"
            android:onClick="SetThree"
            android:backgroundTint="@color/gray"
            android:text="@string/number3"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:backgroundTint="@color/pink"
            android:text="@string/add"
            android:onClick="SetAdd"
            android:layout_marginEnd="5dp"
            android:layout_weight="2"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_mul"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:backgroundTint="@color/pink"
            android:text="@string/mul"
            android:onClick="SetMul"
            android:layout_weight="2"
            android:textSize="50sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <Button
            android:id="@+id/btn_0"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:backgroundTint="@color/gray"
            android:layout_marginEnd="5dp"
            android:text="@string/number0"
            android:layout_weight="2"
            android:onClick="SetZero"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_equal"
            android:layout_width="160dp"
            android:layout_height="fill_parent"
            android:backgroundTint="@color/pink"
            android:text="@string/equal"
            android:onClick="SetCalculate"
            android:layout_marginEnd="5dp"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_dot"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:backgroundTint="@color/pink"
            android:text="@string/dot"
            android:onClick="SetDot"
            android:layout_marginEnd="5dp"
            android:layout_weight="2"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_percent"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:backgroundTint="@color/pink"
            android:text="@string/percent"
            android:layout_weight="2"
            android:textSize="50sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>