<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:autofillHints=""
        android:background="@color/purple_200"
        android:fontFamily="@font/merriweather_regular"
        android:inputType="numberDecimal"
        android:hint="@string/number0"
        android:gravity="end|bottom"
        android:textSize="90sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_7"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        android:fontFamily="@font/merriweather_regular"
        android:text="@string/number7"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.223" />

    <Button
        android:id="@+id/btn_8"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        android:fontFamily="@font/merriweather_regular"
        android:text="@string/number8"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.228"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.223" />

    <Button
        android:id="@+id/btn_9"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        android:fontFamily="@font/merriweather_regular"
        android:text="@string/number9"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.223" />

    <Button
        android:id="@+id/btn_delete_all"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/pink"
        android:fontFamily="@font/merriweather_regular"
        android:text="@string/delete_all"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.223" />

    <Button
        android:id="@+id/btn_delete_number"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/pink"
        android:fontFamily="@font/merriweather_regular"
        android:text="@string/delete_all"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.773"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.232" />

</androidx.constraintlayout.widget.ConstraintLayout>